Refactor, code review